# OGLD

./: .gitignore  .gitmodules  OGLD.sln
Demos/3DCube/: CMakeLists.txt
Demos/3DCube/Shaders/: shader.glsl
Demos/3DCube/Source/: 3DCubeApp.cpp  3DCubeApp.hpp
Demos/Main/: CMakeLists.txt  main.cpp
Demos/Main/Shaders/: fragment.glsl  shader.glsl  shadow_mapping.glsl  skybox.glsl  vertex.glsl
Demos/Main/Source/: DemoApp.cpp  DemoApp.hpp  MainApp.cpp  MainApp.hpp  main.cpp
Demos/MainDemo/: MainDemo.vcxproj  imgui.ini
Demos/MainDemo/Source/: main.cpp
Demos/Texture/: CMakeLists.txt
Demos/Texture/Shaders/: shader.glsl
Demos/Texture/Source/: TextureApp.cpp  TextureApp.hpp
Demos/Texture/Textures/: COPYRIGHT.md
Demos/Triangle/: CMakeLists.txt
Demos/Triangle/Shaders/: shader.glsl
Demos/Triangle/Source/: TriangleApp.cpp  TriangleApp.hpp
OGLD/: CMakeLists.txt  OGLD.vcxproj  OGLD.vcxproj.filters
OGLD/Source/: Application.cpp  Application.h  EntryPoint.h  IndexBuffer.cpp  IndexBuffer.h  OGLD.hpp  Shader.cpp  Shader.h  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  library.h
OGLD/Source/Components/: Component.hpp
OGLD/Source/Components/Camera/: Camera.cpp  Camera.h  CameraComponent.cpp  CameraComponent.h  CameraComponent.hpp
OGLD/Source/Components/Mesh/: Mesh.cpp  Mesh.h
OGLD/Source/Components/Objects/Cube/: Cube.cpp  Cube.h
OGLD/Source/Components/PointLight/: PointLight.h
OGLD/Source/Components/SkyBox/: SkyBox.cpp  SkyBox.h
OGLD/Source/Core/: Application.cpp  Application.h  Application.hpp  Config.hpp  Config.hpp.in  Core.cpp  Core.h  Entity.hpp  EntryPoint.h  EntryPoint.hpp
OGLD/Source/Core/Application/: Application.cpp  Application.h
OGLD/Source/Core/Renderer/: RegisterObject.cpp  RegisterObject.h
OGLD/Source/Core/Shader/: Shader.cpp  Shader.h
OGLD/Source/Objects/: Object.cpp  Object.hpp
OGLD/Source/Objects/Cube/: Cube.cpp  Cube.hpp
OGLD/Source/Objects/Terrain/: Terrain.cpp  Terrain.hpp
OGLD/Source/OpenGL/: CubeMap.hpp  DepthFBO.cpp  DepthFBO.hpp  DepthMap.cpp  DepthMap.hpp  ErrorHandler.hpp  IndexBuffer.hpp  Model.cpp  Model.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.h  Shader.hpp  SkyBox.hpp  Texture.cpp  Texture.h  Texture.hpp  UniformBuffer.hpp  VertexArray.h  VertexArray.hpp  VertexBuffer.hpp
