cmake_minimum_required(VERSION 3.20)
project(OGLD_DEMO_MAIN)

set(CMAKE_CXX_STANDARD 17)

set(CMAKE_BINARY_DIR "${PROJECT_SOURCE_DIR}../../../bin/${CMAKE_SYSTEM_NAME}/${CMAKE_PROJECT_NAME}/${CMAKE_BUILD_TYPE}-${CMAKE_SYSTEM_PROCESSOR}")

file(GLOB SHADERFILES "Shaders/*.glsl")
file(GLOB TEXTUREFILES "Textures/*.jpg" "Textures/*.png")

file(COPY ${SHADERFILES} DESTINATION ${CMAKE_BINARY_DIR}/Shaders/)
file(COPY ${TEXTUREFILES} DESTINATION ${CMAKE_BINARY_DIR}/Textures/)

set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/)

foreach(OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES})
    string(TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG)
    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_BINARY_DIR}/other/)
    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_BINARY_DIR}/libs/)
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_BINARY_DIR})
endforeach(OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES)

include_directories(../../OGLD/Source/)

file(GLOB SOURCE_FILES
        "Source/DemoApp.cpp"
        "Source/DemoApp.hpp"
        )

add_executable(OGLD_DEMO_MAIN
        ${SOURCE_FILES}
        )

add_subdirectory(../../OGLD/ ${CMAKE_BINARY_DIR})
target_link_libraries(${CMAKE_PROJECT_NAME}
        OGLD_LIBRARY
        )